--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -1,14 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
-	<head>
-		<title>AirBnB clone</title>
-	</head>
-    <body style="margin:0px;padding:0px;">
-		<header style="background-color:#FF0000;height:70px;width:100%;">
-		</header>
-
-		<footer style="position:fixed;bottom:0;background-color:#00FF00;height:60px;width:100%;text-align:center;line-height:30px;">
-			<p>Holberton School</p>
-		</footer>
-	</body>
+<html>
+  <head>
+    <title>AirHBnB</title>
+  </head>
+  <body style="margin: 0; padding: 0">
+    <header
+      style="background-color: #ff0000; height: 70px; width: 100%"
+    ></header>
+    <footer
+      style="
+        background-color: #00ff00;
+        height: 60px;
+        width: 100%;
+        position: fixed;
+        bottom: 0;
+        text-align: center;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        color: black;
+      "
+    >
+      Best School
+    </footer>
+  </body>
 </html>
