--- a/web_static/1-index.html
+++ b/web_static/1-index.html
@@ -1,21 +1,35 @@
 <!DOCTYPE html>
-<html lang="en">
-	<head>
-		<title>AirBnB clone</title>
-		<style>
+<html>
+  <head>
+    <title>AirHBnB</title>
+    <style>
+      body {
+        margin: 0;
+        padding: 0;
+      }
 
-			body {margin:0px;padding:0px;}
-			header {background-color:#FF0000;height:70px;width:100%;}
-			footer {position:fixed;bottom:0;background-color:#00FF00;height:60px;width:100%;text-align:center;line-height:30px;}
+      header {
+        background-color: #ff0000;
+        height: 70px;
+        width: 100%;
+      }
 
-		</style>
-	</head>
-    <body>
-		<header>
-		</header>
-
-		<footer>
-			<p>Holberton School</p>
-		</footer>
-	</body>
+      footer {
+        background-color: #00ff00;
+        height: 60px;
+        width: 100%;
+        position: fixed;
+        bottom: 0;
+        text-align: center;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        color: black;
+      }
+    </style>
+  </head>
+  <body>
+    <header></header>
+    <footer>Best School</footer>
+  </body>
 </html>
