--- a/web_static/2-index.html
+++ b/web_static/2-index.html
@@ -1,18 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
-	<head>
-		<title>AirBnB clone</title>
-
-		<link rel="stylesheet" href="styles/2-common.css"/>
-		<link rel="stylesheet" href="styles/2-header.css"/>
-		<link rel="stylesheet" href="styles/2-footer.css"/>
-	</head>
-    <body>
-		<header>
-		</header>
-
-		<footer>
-			<p>Holberton School</p>
-		</footer>
-	</body>
+<html>
+  <head>
+    <title>AirHBnB</title>
+    <link rel="stylesheet" href="styles/2-common.css" />
+    <link rel="stylesheet" href="styles/2-header.css" />
+    <link rel="stylesheet" href="styles/2-footer.css" />
+  </head>
+  <body>
+    <header></header>
+    <footer>Best School</footer>
+  </body>
 </html>
