--- a/web_static/8-index.html
+++ b/web_static/8-index.html
@@ -1,129 +1,149 @@
 <!DOCTYPE html>
-<html lang="en">
-	<head>
-		<title>AirBnB clone</title>
-
-		<link rel="shortcut icon" href="images/icon.ico" >
-
-		<link rel="stylesheet" href="styles/4-common.css"/>
-		<link rel="stylesheet" href="styles/3-header.css"/>
-		<link rel="stylesheet" href="styles/3-footer.css"/>
-		<link rel="stylesheet" href="styles/6-filters.css"/>
-		<link rel="stylesheet" href="styles/8-places.css"/>
-	</head>
-    <body>
-		<header>
-			<div id="header_logo"></div>
-		</header>
-		<div class="container">
-			<section class="filters">
-				<button>Search</button>
-				<div class="locations">
-					<h3>States</h3>
-					<h4>California, Arizona...</h4>
-					<ul class="popover">
-						<li><h2>Arizona</h2>
-							<ul>
-								<li><h4>Page</h4></li>
-								<li><h4>Page2</h4></li>
-							</ul></li>
-						<li><h2>California</h2>
-							<ul>
-								<li><h4>San Francisco</h4></li>
-								<li><h4>Los Altos</h4></li>
-							</ul></li>
-					</ul>
-				</div>
-				<div class="amenities">
-					<h3>Amenities</h3>
-					<h4>Internet, Kitchen...</h4>
-					<ul class="popover">
-						<li><h4>Internet</h4></li>
-						<li><h4>TV</h4></li>
-						<li><h4>Kitchen</h4></li>
-						<li><h4>Iron</h4></li>
-					</ul>
-				</div>
-
-			</section>
-			<section class="places">
-				<h1>Places</h1>
-				<article>
-					<div class="headline">
-						<h2>My home</h2>
-						<div class="price_by_night">$80</div>
-					</div>
-					<div class="information">
-						<div class="max_guest">
-							<div class="guest_icon"></div>
-							<p>2 Guests</p>
-						</div>
-						<div class="number_rooms">
-							<div class="bed_icon"></div>
-							<p>1 Bedroom</p>
-						</div>
-						 <div class="number_bathrooms">
-							<div class="bath_icon"></div>
-							<p>1 Bathroom</p>
-						</div>
-					</div>
-					<div class="user"><b>Owner</b>: John Lennon</div>
-					<div class="description">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                    </div>
-				</article>
-				<article>
-					<div class="headline">
-						<h2>Tiny house</h2>
-						<div class="price_by_night">$65</div>
-					</div>
-					<div class="information">
-                        <div class="max_guest">
-                            <div class="guest_icon"></div>
-                            <p>4 Guests</p>
-                        </div>
-                        <div class="number_rooms">
-                            <div class="bed_icon"></div>
-                            <p>2 Bedroom</p>
-                        </div>
-                         <div class="number_bathrooms">
-                            <div class="bath_icon"></div>
-                            <p>1 Bathroom</p>
-                        </div>
-                    </div>
-					<div class="user"><b>Owner</b>: Adrienne</div>
-					<div class="description">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                    </div>
-				</article>
-				<article>
-					<div class="headline">
-						<h2>A suite</h2>
-						<div class="price_by_night">$180</div>
-					</div>
-					<div class="information">
-                        <div class="max_guest">
-                            <div class="guest_icon"></div>
-                            <p>5 Guests</p>
-                        </div>
-                        <div class="number_rooms">
-                            <div class="bed_icon"></div>
-                            <p>3 Bedroom</p>
-                        </div>
-                         <div class="number_bathrooms">
-                            <div class="bath_icon"></div>
-                            <p>2 Bathroom</p>
-                        </div>
-                    </div>
-					<div class="user"><b>Owner</b>: Betty Holberton</div>
-					<div class="description">
-						Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-					</div>
-				</article>
-			</section>
-		</div>
-		<footer>
-			<p>Holberton School</p>
-		</footer>
-	</body>
+<html>
+  <head>
+    <title>AirHBnB</title>
+    <link rel="stylesheet" href="styles/4-common.css" />
+    <link rel="stylesheet" href="styles/3-header.css" />
+    <link rel="stylesheet" href="styles/6-filters.css" />
+    <link rel="stylesheet" href="styles/8-places.css" />
+    <link rel="stylesheet" href="styles/3-footer.css" />
+    <link rel="icon" type="image/png" href="images/icon.png" />
+  </head>
+  <body>
+    <header>
+      <div class="logo"></div>
+    </header>
+    <div class="container">
+      <section class="filters">
+        <div class="locations">
+          <h3>States</h3>
+          <h4>Colorado, Florida...</h4>
+          <ul class="popover">
+            <li>
+              <h3>Colorado</h3>
+              <ul>
+                <li>Denver</li>
+                <li>Aurora</li>
+              </ul>
+            </li>
+            <li>
+              <h3>Florida</h3>
+              <ul>
+                <li>Miami</li>
+                <li>Orlando</li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+        <div class="amenities">
+          <h3>Amenities</h3>
+          <h4>Internet, Kitchen...</h4>
+          <ul class="popover">
+            <li>Internet</li>
+            <li>TV</li>
+            <li>Kitchen</li>
+            <li>Jacuzzi</li>
+          </ul>
+        </div>
+        <button class="search-button">Search</button>
+      </section>
+      <section class="places">
+        <h1>Places</h1>
+        <div class="places-list">
+          <article>
+            <div class="article-header">
+              <h2>My Home</h2>
+              <div class="price_by_night">$90</div>
+            </div>
+            <div class="information">
+              <div class="max_guest">
+                <div class="icon"></div>
+                <p>3 guests</p>
+              </div>
+              <div class="number_rooms">
+                <div class="icon"></div>
+                <p>1 bedroom</p>
+              </div>
+              <div class="number_bathrooms">
+                <div class="icon"></div>
+                <p>2 bathrooms</p>
+              </div>
+            </div>
+            <div class="description">
+              <div class="user"><strong>Owner:</strong> Ai Hoshino</div>
+              <p>
+                Welcome to our cozy retreat! This charming house is perfect for
+                your stay, offering a serene and comfortable environment for you
+                to unwind and relax. The house boasts 1 spacious bedroom,You'll
+                also have access to 2 modern and well-appointed bathrooms.
+              </p>
+            </div>
+          </article>
+          <article>
+            <div class="article-header">
+              <h2>Tiny House</h2>
+              <div class="price_by_night">$75</div>
+            </div>
+            <div class="information">
+              <div class="max_guest">
+                <div class="icon"></div>
+                <p>4 guests</p>
+              </div>
+              <div class="number_rooms">
+                <div class="icon"></div>
+                <p>2 bedroom</p>
+              </div>
+              <div class="number_bathrooms">
+                <div class="icon"></div>
+                <p>1 bathrooms</p>
+              </div>
+            </div>
+            <div class="description">
+              <div class="user"><strong>Owner:</strong> Sakata Gintoki</div>
+              <p>
+                charming tiny house nestled in a tranquil setting. This cozy
+                retreat boasts two comfortably appointed bedrooms, perfect for
+                accommodating up to four guests. The well-designed layout
+                includes a modern bathroom with all the essentials to ensure a
+                refreshing stay.
+              </p>
+            </div>
+          </article>
+          <article>
+            <div class="article-header">
+              <h2>A Suite</h2>
+              <div class="price_by_night">$220</div>
+            </div>
+            <div class="information">
+              <div class="max_guest">
+                <div class="icon"></div>
+                <p>5 guests</p>
+              </div>
+              <div class="number_rooms">
+                <div class="icon"></div>
+                <p>3 bedroom</p>
+              </div>
+              <div class="number_bathrooms">
+                <div class="icon"></div>
+                <p>2 bathrooms</p>
+              </div>
+            </div>
+            <div class="description">
+              <div class="user"><strong>Owner:</strong> Zino-Chan</div>
+              <p>
+                Step into luxury and sophistication with our exquisite suite.
+                Elegantly designed and thoughtfully curated, this spacious
+                retreat offers a haven of comfort and style. The suite features
+                a plush king-size bed, adorned with premium linens, promising
+                restful nights of blissful sleep. Indulge in the opulent
+                bathroom, featuring a deep soaking tub and a separate rain
+                shower, offering the ultimate relaxation experience.
+              </p>
+            </div>
+          </article>
+        </div>
+      </section>
+    </div>
+    <footer>Best School</footer>
+  </body>
 </html>
